@@ -1,6 +1,9 @@
 Changes since version 1.2.0
 ---------------------------
 
+- Fixed an incorrect complaint in the Slice parser about
+  about a change of meaning for enumeration constant definitions.
+
 - The glacierrouter and glacierstarter processes used to abort if
   given a non-existent config file.
 
